--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Typo_Dodam';
-    src: url('../font/Typo_Dodam.ttf') format('ttf');
+    src: url('../font/Typo_Dodam.ttf') format('truetype');
 }
 
 * {
@@ -124,7 +124,7 @@ header{
 
 .sect-1 span {
 
-    background: linear-gradient(to right, #FFFFFF, #FFE031);
+    background: linear-gradient( #FFFFFF, #FFE031 80%);
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -164,12 +164,15 @@ header{
     width: 100%;
     height: 77px;
     border-radius: 20px;
+    
 }
 
 .sect-2-cards span {
 
-    background: linear-gradient(to right, #FFFFFF, #FFE031);
+    background: linear-gradient( #FFFFFF, #FFE031 80%);
+    
     -webkit-background-clip: text;
+
     color: transparent;
     font-weight: 700;
     font-size: 42px;
@@ -449,6 +452,9 @@ header{
         .sect-2-cards h1 {
             font-weight: 400;
             font-size: 44px;
+        }
+        .sect-2-cards span {
+            font-size: 28px;
         }
         .sect-3-card h2 {
             font-size: 48px;
